<resources>
    <string name="app_name">Repetition Counting</string>
    <string name="send_data">Start training</string>
    <string name="stop_gathering">Stop training</string>
    <string name="choose_exercise">Choose exercise type</string>
    <string name="exercise1">Bench Press</string>
    <string name="exercise2">Pull Ups</string>
    <string name="statusLabel">Status:</string>
    <string name="statusText">Resting</string>
    <string name="result">Result:</string>
    <string name="info">Press start button then perform chosen exercise</string>
    <string name="select">Select</string>
    <string name="descriptionID">DescId</string>
    <string name="weight">Used weight</string>
    <string name="chooseDate">Choose a date</string>
    <string name="chooseYear">Year:</string>
    <string name="chooseMonth">Month:</string>
    <string name="workoutInfo">Workout Info</string>
    <string name="chooseWorkoutDate">Choose Workout Date</string>
    <string name="addFood">Add Food</string>
    <string name="addToDiet">Add To Diet</string>
    <string name="quantity">Quantity</string>
</resources>